Fix warning on deleteLater on nullptr in QSampleCache

It is possible to have a loading thread running, but with no network
manager.
In that case, calling deleteLater() on m_networkAccessManager results in
a warning: postEvent: Unexpected null receiver.

Fix this issue by checking whether the network manager exists before
calling deleteLater() on it.

Task-number: QTBUG-66910
Change-Id: I818a87a605b4e906dee47c6c815a6b8112b16829
Reviewed-by: VaL Doroshchuk <valentyn.doroshchuk@qt.io>
(cherry picked from commit 448c992972d4078af1eee7ad9ccc8d86c0f2e78d)
Reviewed-by: Pierre Hallot <pierre.hallot@sensefly.com>
Reviewed-by: Christian Stromme <christian.stromme@qt.io>