src/multimedia/audio/qsamplecache_p.cpp
@@ -141,8 +141,10 @@ void QSampleCache::loadingRelease()
     m_loadingRefCount--;
     if (m_loadingRefCount == 0) {
         if (m_loadingThread.isRunning()) {
-            m_networkAccessManager->deleteLater();
-            m_networkAccessManager = nullptr;
+            if (m_networkAccessManager) {
+                m_networkAccessManager->deleteLater();
+                m_networkAccessManager = nullptr;
+            }
             m_loadingThread.exit();
         }
     }
